[package]
name = "agon-ez80-emulator"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ez80 = { git = "https://github.com/tomm/ez80.git", rev="d83c8dab440c6c939fbcfd444a0a5a4da6a9beb6"}
#ez80 = { path = "../../ez80" }
rand = "*"
filetime = "0.2"
chrono = "0.4.38"
pico-args = "0.5.0"
