[package]
name = "agon-light-emulator-debugger"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
agon-cpu-emulator = { git = "https://github.com/tomm/agon-cpu-emulator.git", rev="2578da036d1f96b2e5ad215729cb869a8b83b4bd"}
#agon-cpu-emulator = { path = "../agon-cpu-emulator" }
rustyline = "12.0.0"
